--- a/locale/GlossarPlugin/it.po
+++ b/locale/GlossarPlugin/it.po
@@ -1,3 +1,22 @@
+# Plugin translation for Italian
+# Translators:
+# ModellAachen
+msgid ""
+msgstr ""
+"Project-Id-Version: GlossarPlugin $Id\n"
+"Report-Msgid-Bugs-To: support@modell-aachen.de\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2015-08-20 15:35+0200\n"
+"Last-Translator: Modell Aachen <access@modell-aachen.de>\n"
+"Language-Team: Italian <http://translate.modell-aachen.de/projects/glossarplugin"
+"/releasenew-york/it/>\n"
+"Language: it\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 1.9\n"
+
 #: data/Sandbox/GlossarIndex.txt
 msgid "Create new glossary entry"
 msgstr ""
